# Shego75HE

./: .gitignore  CHANGELOG.md  README.md  Shego75HE.code-workspace
SignalRGB/: SHEGO75.js  SHEGO75_breadboard.js  signalrgb_patched.c  signalrgb_patched.h
app_v2/: README.md  package.json  tsconfig.json
assets/: switch.xmp
case/: SHEGO75 - CASE_LOWER-V1.step  SHEGO75 - CASE_UPPER-V1.step  SHEGO75 - Drawing 1.dwg  SHEGO75 - FOAM.dxf  SHEGO75 - IPXE_FOAM.dxf  SHEGO75 - PLATE-V2.step  SHEGO75 - PLATE-v1.dxf  SHEGO75 - ProtectiveFilm.step  SHEGO75 - ScreenHolder.step  SHEGO75 - ScreenHolder_notab.step  SHEGO75_PLATE_SPLIT.step
docs/: DEBUG_TOGGLES.md  SENSOR_TO_MATRIX_LOGIC.md  SENSOR_TO_MATRIX_MAPPING.md
esp32_display/: GIFDraw.ino  User_Setup.h  esp32_display.ino  i2c.ino
shego75_breadboard/: README.md  VIA_SETUP.md  config.h  encoder_fixes.md  hid.c  keyboard.json  lighting.c  lighting.h  mux_adc.c  mux_adc.c.bak  mux_adc.h  mux_pins.c  mux_pins.h  mux_pins_new.c  mux_pins_simple.c  mux_tables.c  rules.mk  shego_breadboard.json  socd.c  socd.h  uart.c  uart.h  uart_commands.c  uart_keycodes.c  uart_keycodes.h  wiring.cpp  zerrors.txt
shego75_v1/: board.c  config.h  hid_recieve.c  hid_recieve.h  hid_reports.c  (+26 more)
shego75_v2/: BUILD_WINDOWS.md  CMakeLists.txt  README.md  pico_sdk_import.cmake
shego75_v2/src/board/: board_hw.c  board_hw.h
shego75_v2/src/board/mini/: board_config.c
shego75_v2/src/lighting/: lighting_engine.c  lighting_engine.h
shego75_v2/src/protocol/gif/: gif_bridge.h
shego75_v2/src/protocol/signalrgb/: signalrgb_patched.h
shego75_v2/src/protocol/via/: via_protocol.h
shego75_v2/src/usb/: usb_descriptors.c
(+112 files in other folders)
